fix: center align DataTable's filter items (#2610)
* fix: datatable checkboxes align

* fix: datatable checkbox align

* fix: fix align for side-filters checkbox

---------

--- a/src/DataTable/index.scss
+++ b/src/DataTable/index.scss
@@ -112,6 +112,12 @@
       display: flex;
       justify-content: flex-end;
     }
+
+    .pgn__data-table-side-filters-item {
+      .pgn__form-checkbox {
+        align-items: center;
+      }
+    }
   }
 
   .pgn__data-table-layout-main {
@@ -175,6 +181,10 @@
 .pgn__data-table-filters-dropdown-item {
   padding: $data-table-padding-small 14px;
   min-width: 15em;
+
+  .pgn__form-checkbox {
+    align-items: center;
+  }
 }
 
 .pgn__data-table-status {
